--- a/src/app/details/details.component.html
+++ b/src/app/details/details.component.html
@@ -1,4 +1,11 @@
-<p>
+<div *ngIf="details" [class.hide]="showIssues">
   {{ details.name }}
   {{ details.description }}
-</p>
+</div>
+
+<button (click)="toggleIssues()">Toggle Issues</button>
+<div [class.hide]="!showIssues">
+  <p *ngFor="let issue of issues">
+    {{ issue.title }}
+  </p>
+</div>
