--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -3,7 +3,7 @@
 
 <ul *ngFor="let repo of repositories">
   <li>
-    <a href="javascript:void(0)" [routerLink]="['details', repo.id]">{{ repo.name }}</a>
+    <a href="javascript:void(0)" [routerLink]="['details', repo.full_name]">{{ repo.name }}</a>
     <p>{{ repo.description }}</p>
   </li>
 </ul>
