--- a/src/app/details/details.component.html
+++ b/src/app/details/details.component.html
@@ -1,11 +1,47 @@
-<div *ngIf="details" [class.hide]="showIssues">
-  {{ details.name }}
-  {{ details.description }}
-</div>
+<section *ngIf="details" [class.hide]="showIssues">
+  <h1>{{ details.full_name }}</h1>
+  <p>{{ details.description }}</p>
+  <a href="{{ details.html_url }}" target="_blank">{{ details.html_url }} </a>
+  <div class="card-deck">
+    <div class="card">
+      <svg height="64" class="card-img-top bg-primary octicon octicon-repo-forked" viewBox="0 0 10 16" version="1.1" width="40" aria-hidden="true">
+        <path fill="#fff" fill-rule="evenodd" d="M8 1a1.993 1.993 0 0 0-1 3.72V6L5 8 3 6V4.72A1.993 1.993 0 0 0 2 1a1.993 1.993 0 0 0-1 3.72V6.5l3 3v1.78A1.993 1.993 0 0 0 5 15a1.993 1.993 0 0 0 1-3.72V9.5l3-3V4.72A1.993 1.993 0 0 0 8 1zM2 4.2C1.34 4.2.8 3.65.8 3c0-.65.55-1.2 1.2-1.2.65 0 1.2.55 1.2 1.2 0 .65-.55 1.2-1.2 1.2zm3 10c-.66 0-1.2-.55-1.2-1.2 0-.65.55-1.2 1.2-1.2.65 0 1.2.55 1.2 1.2 0 .65-.55 1.2-1.2 1.2zm3-10c-.66 0-1.2-.55-1.2-1.2 0-.65.55-1.2 1.2-1.2.65 0 1.2.55 1.2 1.2 0 .65-.55 1.2-1.2 1.2z"></path>
+      </svg>
+      <div class="card-body">
+        <h2 class="card-title">Forks: </h2>
+        <span class="card-number">{{ details.forks_count | number }}</span>
+      </div>
+    </div>
+    <div class="card">
+      <svg height="64" class="card-img-top bg-primary octicon octicon-eye" viewBox="0 0 16 16" version="1.1" width="64" aria-hidden="true">
+        <path fill="#fff" fill-rule="evenodd" d="M8.06 2C3 2 0 8 0 8s3 6 8.06 6C13 14 16 8 16 8s-3-6-7.94-6zM8 12c-2.2 0-4-1.78-4-4 0-2.2 1.8-4 4-4 2.22 0 4 1.8 4 4 0 2.22-1.78 4-4 4zm2-4c0 1.11-.89 2-2 2-1.11 0-2-.89-2-2 0-1.11.89-2 2-2 1.11 0 2 .89 2 2z"></path>
+      </svg>
+      <div class="card-body">
+        <h2>Watchers: </h2>
+        <span class="card-number">{{ details.subscribers_count | number }}</span>
+      </div>
+    </div>
+    <div class="card">
+      <svg height="64" class="card-img-top bg-primary octicon octicon-star" viewBox="0 0 14 16" version="1.1" width="56" aria-hidden="true">
+        <path fill="#fff" fill-rule="evenodd" d="M14 6l-4.9-.64L7 1 4.9 5.36 0 6l3.6 3.26L2.67 14 7 11.67 11.33 14l-.93-4.74z"></path>
+      </svg>
+      <div class="card-body">
+        <h2>Stars: </h2>
+        <span class="card-number">{{ details.stargazers_count | number }}</span>
+      </div>
+    </div>
+  </div>
+</section>
 
-<button (click)="toggleIssues()">Toggle Issues</button>
-<div [class.hide]="!showIssues">
-  <p *ngFor="let issue of issues">
-    {{ issue.title }}
-  </p>
-</div>
+
+<section *ngIf="issues">
+  <button (click)="toggleIssues()">Toggle Issues</button>
+  <div [class.hide]="!showIssues">
+    <ul class="list-group">
+      <li class="list-group-item" *ngFor="let issue of issues">
+        <a href="{{ issue.html_url }}" target="_blank">{{ issue.title }}</a>
+      </li>
+    </ul>
+  </div>
+
+</section>
