fix disappearing search results on route change

--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -13,7 +13,7 @@
               [(ngModel)]="txtQuery" 
               (keyup.enter)="doSearch()">
       <div class="input-group-append">
-        <button class="btn btn-outline-secondary" type="button" (click)="doSearch()">Button</button>
+        <button class="btn btn-outline-secondary" type="button" (click)="doSearch()">Search</button>
       </div>
     </div>
   </div>
