--- a/src/app/details/details.component.scss
+++ b/src/app/details/details.component.scss
@@ -1,11 +1,15 @@
-.card-number {
-    font-size: 3rem;
-
-    @media screen and (max-width: 576px) {
-        font-size: 1.5rem;
-    }
+.details {
+  margin-bottom: 1.5rem;
 }
 
-.hide {
-    display: none;
+.details-main-info {
+  margin-bottom: 1.5rem;
+}
+
+.card-number {
+  font-size: 3rem;
+
+  @media screen and (max-width: 576px) {
+    font-size: 1.5rem;
+  }
 }
